dfir_rs/tests/compile-fail-stable/surface_port_unused_in.stderr
error: Input port index is unused. (Is the port on the correct side?)
 --> tests/compile-fail-stable/surface_port_unused_in.rs:6:10
  |
6 |         [0]src -> for_each(drop);
  |          ^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
 --> tests/compile-fail-stable/surface_port_unused_in.rs:8:8
  |
8 |     df.run_available_sync();
  |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
